# PassGenPro

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/PassGenPro_backend/: Cargo.toml
src/PassGenPro_backend/src/: lib.rs
src/PassGenPro_frontend/src/: index.html  index.js
