[package]
name = "PassGenPro_backend"
version = "0.1.0"
edition = "2021"



[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs" 

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1"
wasm-bindgen = "0.2.76"
js-sys = "0.3.56"
web-sys = "0.3.56"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
